# admin_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_db.py  create_tables.py  docker-compose.external-db.yml  docker-compose.yml  drop_db.py  main.py  pyproject.toml  requirements.txt  setup_postgres.ps1  test_db_connection.py  test_db_connection_en.py  update_db.py
app/core/: __init__.py  config.py  decorators.py  di.py  exceptions.py  logging.py  utils.py
config/: bot_config.py  database.py  notifications.json
handlers/: __init__.py
keyboards/: __init__.py
migrations/: add_new_post_columns.py  channels_migration.py  env.py  posts_migration.py
models/: base.py  roles.py  users.py
scripts/: admin_role_manager.py  backup_manager.py  backup_service.py  bot_health.py  check_admin_id.py  check_admin_role_in_db.py  check_channels_table.py  check_connections.py  check_role_audit_table.py  check_role_service.py  check_tables.py  check_user_role.py  check_user_roles_table.py  create_admin.py  create_db_and_tables.py  create_role_audit_table.py  create_tables.py  direct_sql.py  fix_admin_role.py  fix_migrations.py  fix_role_names.py  fix_tables.py  generate_empty_revision.py  init_db.py  init_migrations.py  manage_migrations.py  mark_migration_as_applied.py  rename_role.py  setup_migrations.py  test_db_connection.py  test_minimal_connection.py  test_psycopg2_connection.py
utils/: ai_service.py  database_backup.py  database_initializer.py  logger.py  migration_manager.py  notifications.py  role_cleanup.py  user_manager.py
(+71 files in other folders)
